# fast-student

./: .gitignore  README.md  pyproject.toml  student.drawio
fast_acl/: app.py  auth.py  controller.py  db.py  enums.py  exception.py  models.py  repository.py  sample_data.py  schema.py  settings.py  types.py  utils.py
fast_acl/acl/: grants.py  grants_func.py  mapper.py  role.py  routes.py
tests/: conftest.py  mock.py  test_acl.py  test_student.py
