[tool.poetry]
name = "fast-acl"
version = "0.1.0"
description = ""
authors = ["ManiMozaffar <mani.mozaffar@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_acl"}]

[tool.poetry.dependencies]
python = "^3.11"
python-jose = "^3.3.0"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
faker = "^19.3.0"
rich = "^13.5.2"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
